--- a/Movimiento/www/templates/tab-chats.html
+++ b/Movimiento/www/templates/tab-chats.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Movimientos">
   <ion-content>
-    <button ng-click="Boton()" class="button button-block button-positive" id="enviar">Responder</button>
+    <div id="test"></div>
   </ion-content>
 </ion-view>
