Se agregan banderas para que no repita el mensaje

--- a/MoveAPP/MoveApp/www/templates/tab-chats.html
+++ b/MoveAPP/MoveApp/www/templates/tab-chats.html
@@ -20,8 +20,11 @@
                         <li class="item">
                             Z : {{Z}}
                         </li>
+                         <li class="item">
+                            banderaX : {{banderaX}}
+                        </li>
                         <li class="item">
-                            timeStamp : {{timeStamp}}
+                            banderaY : {{banderaY}}
                         </li>
                     </ul>
                 </div>
