Funcionamiento OK de banderas

--- a/MoveAPP/MoveApp/www/templates/tab-chats.html
+++ b/MoveAPP/MoveApp/www/templates/tab-chats.html
@@ -21,10 +21,16 @@
                             Z : {{Z}}
                         </li>
                          <li class="item">
-                            banderaX : {{banderaX}}
+                            banderaIzquierda : {{banderaIzquierda}}
                         </li>
                         <li class="item">
-                            banderaY : {{banderaY}}
+                            banderaDerecha : {{banderaDerecha}}
+                        </li>
+                        <li class="item">
+                            banderaArriba : {{banderaArriba}}
+                        </li>
+                        <li class="item">
+                            banderaAbajo : {{banderaAbajo}}
                         </li>
                     </ul>
                 </div>
