Agregado de icono e imagen

--- a/MoveAPP/MoveApp/www/templates/tab-chats.html
+++ b/MoveAPP/MoveApp/www/templates/tab-chats.html
@@ -32,6 +32,9 @@
                         <li class="item">
                             banderaAbajo : {{banderaAbajo}}
                         </li>
+                        <li class="item">
+                            banderaDadovuelta : {{banderaDadovuelta}}
+                        </li>
                     </ul>
                 </div>
             </div>
